--- a/Models/SpeechLM/2023.01.05_VALL-E.md
+++ b/Models/SpeechLM/2023.01.05_VALL-E.md
@@ -34,8 +34,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 We introduce a language modeling approach for *text-to-speech synthesis (TTS)*.
 Specifically, we train a neural codec language model (called ***VALL-E***) using discrete codes derived from an off-the-shelf neural audio codec model, and regard TTS as a conditional language modeling task rather than continuous signal regression as in previous work.
@@ -45,8 +44,7 @@ Experiment results show that ***VALL-E*** significantly outperforms the state-of
 In addition, we find that ***VALL-E*** could preserve the speaker’s emotion and acoustic environment of the acoustic prompt in synthesis.
 See https://aka.ms/valle for demos of our work.
 
-</details>
-<br>
+</td><td>
 
 我们介绍了一种用于语音合成的语言建模方法.
 具体来说, 我们使用从现成的神经音频编解码器模型中导出的离散编码训练了一个神经编解码器语言模型 (称为 ***VALL-E***), 并将 TTS 视为一个条件语言建模任务, 而不是像以前的工作那样视为连续信号回归任务.
@@ -56,12 +54,13 @@ See https://aka.ms/valle for demos of our work.
 此外, 我们发现 ***VALL-E*** 可以在合成中保留声学提示中的说话者的情感和声学环境
 请访问 https://aka.ms/valle 查看本项工作的示例.
 
+</td></tr></table>
+
 ## 1·Introduction: 引言
 
 ![Images/2023.01.05_VALL-E_Fig.01.png](Images/2023.01.05_VALL-E_Fig.01.png)
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 The last decade has yielded dramatic breakthroughs in speech synthesis through the development of neural networks and end-to-end modeling.
 Currently, cascaded *text-to-speech (TTS)* systems ([Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
@@ -71,6 +70,11 @@ Because the training data is relatively small, current TTS systems still suffer 
 Speaker similarity and speech naturalness decline dramatically for unseen speakers in the zero-shot scenario.
 To tackle the zero-shot TTS problem, existing work leverages speaker adaptation ([SEA (2018)](../TTS2_Acoustic/2018.09.27_SEA.md); [Wang (2020)](../_Full/Spoken_Content_and_Voice_Factorization_for_Few-Shot_Speaker_Adaptation.md)) and speaker encoding ([Arik (2018)](../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md); [YourTTS (2021)](../E2E/2021.12.04_YourTTS.md)) methods, requiring additional fine-tuning, complex pre-designed features, or heavy structure engineering.
 
+</td><td>
+
+</td></tr>
+<tr><td>
+
 Instead of designing a complex and specific network for this problem, the ultimate solution is to train a model with large and diverse data as much as possible, motivated by success in the field of text synthesis ([GPT-3 (2020)](../TextLM/2020.05.28_GPT-3.md); [PaLM (2022)](../TextLM/2022.04.05_PaLM.md)).
 Recent years have witnessed notable performance improvement for data increase in the text language model, from 16GB of uncompressed text ([BERT (2018)](../TextLM/2018.10.11_BERT.md)), to 160GB ([RoBERTa (2019)](../TextLM/2019.07.26_RoBERTa.md)), to 570GB ([GPT-3 (2020)](../TextLM/2020.05.28_GPT-3.md)), and finally, around 1TB ([PaLM (2022)](../TextLM/2022.04.05_PaLM.md)).
 Transferring this success to the field of speech synthesis, we introduce ***VALL-E***, the first language model-based TTS framework leveraging large, diverse, and multi-speaker speech data.
@@ -79,12 +83,21 @@ Finally, the generated acoustic tokens are used to synthesize the final waveform
 The discrete acoustic tokens derived from an audio codec model enable us to treat TTS as conditional codec language modeling and advanced prompting-based large-model techniques (as in [GPTs (2020)](../TextLM/2020.05.28_GPT-3.md))can be leveraged for the TTS tasks.
 The acoustic tokens also allow us to generate diverse synthesized results in TTS by using different sampling strategies during inference.
 
+</td><td>
+
+</td></tr>
+<tr><td>
+
 We train ***VALL-E*** with [LibriLight (2019)](../../Datasets/2019.12.17_Libri-Light.md), a corpus consisting of 60K hours of English speech with over 7000 unique speakers.
 The original data is audio-only, so we employ a speech recognition model to generate the transcriptions.
 Compared to previous TTS training datasets, such as [LibriTTS (2019)](../../Datasets/2019.04.05_LibriTTS.md), our data contain more noisy speech and inaccurate transcriptions but provide diverse speakers and prosodies.
 We believe the proposed approach is robust to the noise and generalize well by leveraging large data.
 It is worth noting that existing TTS systems are always trained with dozens of hours of single-speaker data or hundreds of hours of multi-speaker data, which is over hundreds of times smaller than ***VALL-E***.
 Tab.01 summarizes the innovation of ***VALL-E***, a language model approach for TTS, using audio codec codes as intermediate representations, leveraging large and diverse data, leading to strong in-context learning capabilities.
+</td><td>
+
+</td></tr>
+<tr><td colspan="2">
 
 |Table 1|Current Systems|VALL-E|
 |:-:|:-:|:-:|
@@ -93,12 +106,20 @@ Tab.01 summarizes the innovation of ***VALL-E***, a language model approach for 
 |Training Data|≤600 Hours| 60K Hours|
 |In-Context Language|×|√|
 
+</td></tr>
+<tr><td>
+
 We evaluate ***VALL-E*** on [LibriSpeech (2015)](../../Datasets/2015.04.19_LibriSpeech.md) and [VCTK (2016)](../../Datasets/2012.08.00_VCTK.md) datasets, where all test speakers are unseen in the training corpus.
 ***VALL-E*** significantly outperforms the state-of-the-art zero-shot TTS system ([YourTTS (2021)](../E2E/2021.12.04_YourTTS.md)) in terms of speech naturalness and speaker similarity, with +0.12 comparative mean option score (CMOS) and +0.93 similarity mean option score (SMOS) improvement on LibriSpeech.
 ***VALL-E*** also beats the baseline on VCTK with+0.11 SMOS and +0.23 CMOS improvements.
 It even achieves a +0.04 CMOS score against ground truth, showing the synthesized speech of unseen speakers is as natural as human recordings on VCTK.
 Moreover, the qualitative analysis shows that ***VALL-E*** is able to synthesize diverse outputs with the same text and target speaker, which could benefit pseudo-data creation for the speech recognition task.
 We also find that ***VALL-E*** could keep the acoustic environment (e.g., reverberation) and emotion (e.g., anger) of the acoustic prompt.
+
+</td><td>
+
+</td></tr>
+<tr><td>
 
 In summary, we make the following contributions.
 - We propose ***VALL-E***, the first TTS framework with strong in-context learning capabilities as GPT-3, which treats TTS as a language model task with audio codec codes as an intermediate representation to replace the traditional mel spectrogram.
@@ -110,15 +131,15 @@ Evaluation results show that ***VALL-E*** significantly outperforms the state-of
 
 We encourage the reader to listen to our samples on the [demo page](https://aka.ms/valle).
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Work: 相关工作
 
 ### 2.1·Zero-Shot TTS: 零样本文本转语音
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Current TTS methods can be categorized into cascaded and end-to-end methods.
 Cascaded TTS systems ([Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
@@ -131,19 +152,20 @@ In the line of speaker adaptation, the following work ([SEA (2018)](../TTS2_Acou
 In parallel, speaker encoding-based methods achieved great progress in recent years.
 A speaker encoding based system contains a speaker encoder and a TTS component, where the speaker encoder could be pre-trained on the speaker verification task ([Jia (2018)](../_Full/2018.06.12_Transfer_Learning_from_Speaker_Verification_to_Multispeaker_Text-To-Speech_Synthesis.md)).
 In [Jia (2018)](../_Full/2018.06.12_Transfer_Learning_from_Speaker_Verification_to_Multispeaker_Text-To-Speech_Synthesis.md) and [Arik (2018)](../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md), the experiments show that the model is able to generate high-quality outputs with 3 seconds enrolled recordings for in-domain speakers.
-To improve the quality of unseen speakers, advanced speaker embedding models ([Cai (2018)](../_Full/2018.04.14_Exploring_the_Encoding_Layer_and_Loss_Function_in_End-to-End_Speaker_and_Language_Recognition_System.md)) can be employed, but it is still undesirable according to [Tan (2021)](../../Surveys/2021.06.29_A_Survey_on_Neural_Speech_Synthesis_63P/Main.md).
+To improve the quality of unseen speakers, advanced speaker embedding models ([Cai (2018)](../_Full/2018.04.14_Exploring_the_Encoding_Layer_and_Loss_Function_in_End-to-End_Speaker_and_Language_Recognition_System.md)) can be employed, but it is still undesirable according to [Tan (2021)](../../Surveys/2021.06.29__Survey__A_Survey_on_Neural_Speech_Synthesis_(63P).md).
 Another way is to design advanced but complex speaker encoder ([AdaSpeech4 (2022)](../Acoustic/2022.04.01_AdaSpeech4.md)).
 Diffusion model based TTS ([Grad-TTS (2021)](../Acoustic/2021.05.13_Grad-TTS.md); [Guided-TTS (2021)](../TTS2_Acoustic/2021.11.23_Guided-TTS.md)) is also extended to zero-shot TTS ([Grad-StyleSpeech (2022)](../TTS2_Acoustic/2022.11.17_Grad-StyleSpeech.md)) and achieved good results.
 Compared to previous work ([FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [VQTTS (2022)](../E2E/2022.04.02_VQTTS.md)), our work follows the line of cascaded TTS but first uses audio codec code as intermediate representations.
 It is the first one that has strong in-context learning capabilities as GPT-3, which does not require fine-tuning, pre-designed features, or a complex speaker encoder.
 
-</details>
-<br>
+
+</td><td>
+
+</td></tr></table>
 
 ### 2.2·Spoken Generative Pre-Trained Models: 口语生成式预训练模型
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Self-supervised learning is widely investigated in the field of speech understanding ([Wav2Vec2.0 (2020)](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md); [WavLM (2021)](../SpeechRepresentation/2021.10.26_WavLM.md)) and speech-to-speech generation ([GSLM (2021)](2021.02.01_GSLM.md); [AudioLM (2022)](2022.09.07_AudioLM.md)).
 In the context of speech-to-speech generation, a hot topic is how to synthesize speech in a textless setting.
@@ -160,13 +182,13 @@ They demonstrate that the pre-trained model only requires a small amount of real
 Previous TTS pre-training work leverages less than 1K hours of data, whereas ***VALL-E*** is pre-trained with 60K hours of data.
 Furthermore, ***VALL-E*** is the first to use audio codec codes as intermediate representations, and emerge in-context learning capability in zero-shot TTS.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ## 3·Background·Speech Quantization: 语音量化背景
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Since audio is typically stored as a sequence of 16-bit integer values, a generative model is required to output $2^{16}=65,536$ probabilities per timestep to synthesize the raw audio.
 In addition, the audio sample rate exceeding ten thousand leads to an extraordinarily long sequence length, making it more intractable for raw audio synthesis.
@@ -198,8 +220,9 @@ A larger bitrate corresponds to more quantizers and better reconstruction qualit
 For example, if we choose EnCodec at 12K bitrates, there are 16 quantizers are needed and the 10-second waveform corresponds to a matrix with 750×16 entries.
 With the discrete codes from all quantizers, the convolutional decoder of EnCodec generates real-valued embeddings and reconstructs the waveform at 24 kHz.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ![](Images/2023.01.05_VALL-E_Fig.02.png)
 
@@ -207,8 +230,7 @@ With the discrete codes from all quantizers, the convolutional decoder of EnCode
 
 ### 4.1·Problem Formulation: Regarding TTS as Conditional Codec Language Modeling
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Given a dataset $\mathcal{D}=\{\mathbf{x}_i, \mathbf{y}_i\}$, where $\mathbf{y}$ is an audio sample and $\mathbf{x} = \{x_0,x_1, \cdots x_L\}$ is its corresponding phoneme transcription, we use a pre-trained neural codec model to encode each audio sample into discrete acoustic codes, denoted as $\text{Encodec}(\mathbf{y}) = C^{T\times 8}$, where $C$ represents the two-dimensional acoustic code matrix, and $T$ is the downsampled utterance length.
 The row vector of each acoustic code matrix $c_{t,:}$ represents the eight codes for frame $t$ and the column vector of each acoustic code matrix $c_{:,j}$ represents the code sequence from the $j$-th codebook, where $j \in \{1,\cdots 8\}$.
@@ -222,13 +244,13 @@ We expect the neural language model learns to extract the content and speaker in
 During inference, given a phoneme sequence and a 3-second enrolled recording of the unseen speaker, the acoustic code matrix with corresponding content and speaker’s voice is firstly estimated by the trained language model.
 Then the neural codec decoder synthesizes the high-quality speech.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ### 4.2·Training: Conditional Codec Language Modeling
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 The neural speech codec model allows us to operate on discrete audio representations.
 Due to residual quantization in the neural codec model, the tokens have a hierarchical structure: tokens from previous quantizers recover acoustic properties like speaker identity, while the consecutive quantizers learn fine acoustic details.
@@ -263,15 +285,15 @@ $$
   p(C|\mathbf{x},\tilde{C};\theta)=p(c_{:,1}|\tilde{C}_{:,1}, \mathbf{X}; \theta_{AR}) \prod_{j=2}^{8}p(c_{:,j}|c_{:,<j},\mathbf{x},\tilde{C};\theta_{NAR}) \tag{3}
 $$
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 #### 4.2.1·Autoregressive Codec Language Modeling
 
 ![](Images/2023.01.05_VALL-E_Fig.03.png)
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 The autoregressive language model generates the tokens from the first quantizer.
 It comprises a phoneme embedding $W_x$, an acoustic embedding $W_a$, a transformer decoder, and a prediction layer.
@@ -289,13 +311,13 @@ During inference, given an enrolled recording, we should concatenate the phoneme
 Meanwhile, the acoustic token sequence of the enrolled recording is used as the prefix in AR decoding, as formulated in [Eq.01]().
 We will study the superiority of this setting in the experiment.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 #### 4.2.2·Non-Autoregressive Codec Language Modeling
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 When we obtain the first quantizer codes by the AR model, we employ a non-autoregressive (NAR) model to generate codes of the other seven quantizers.
 The NAR model has a similar architecture to the AR model, except that it contains eight separate acoustic embedding layers.
@@ -321,13 +343,13 @@ The current stage $i$ is injected into the network with [Adaptive Layer Normaliz
 Unlike AR, the NAR model allows each token to attend to all the input tokens in the self-attention layer.
 We also share the parameters of the acoustic embedding layer and the output prediction layer, which means the weights of the $j$-th prediction layer are the same as the $(j + 1)$-th acoustic embedding layer.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ### 4.3·Inference: In-Context Learning via Prompting
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 In-context learning is a surprising ability of the text-based language model, which is able to predict labels for unseen inputs without additional parameter updates.
 For TTS, if the model can synthesize high-quality speech for unseen speakers without fine-tuning, the model is believed to have in-context learning capability.
@@ -352,8 +374,9 @@ With the phoneme prompt and the acoustic prefix, ***VALL-E*** generates the acou
 In this setting, we use the whole transcription and the first 3 seconds of the utterance as the phoneme and acoustic prompts respectively, and ask the model to generate the continuations.
 The inference process is the same as setting ***VALL-E***, except that the enrolled speech and the generated speech are semantically continuous.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ## 5·Experiment
 
@@ -361,8 +384,7 @@ The inference process is the same as setting ***VALL-E***, except that the enrol
 
 #### Dataset
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We use [LibriLight (2019)](../../Datasets/2019.12.17_Libri-Light.md) as the training data which contains 60K hours of unlabelled speech from audiobooks in English.
 The number of distinct speakers is around 7000 in LibriLight.
@@ -370,13 +392,13 @@ We train a hybrid DNN-HMM ASR model on 960 hours labeled LibriSpeech following K
 Once the hybrid model is trained, unlabeled speech data is decoded and transduced to the best phoneme-level alignment paths where the frameshift is 30ms.
 The [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) model is used to generate the acoustic code matrix for the 60K hours of data.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 #### Model
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Both the AR model and the NAR model have the same transformer architecture with 12 layers, 16 attention heads, an embedding dimension of 1024, a feed-forward layer dimension of 4096, and a dropout of 0.1.
 The average length of the waveform in LibriLight is 60 seconds.
@@ -388,24 +410,24 @@ For the NAR acoustic prompt tokens, we select a random segment waveform of 3 sec
 The models are trained using 16 NVIDIA TESLA V100 32GB GPUs with a batch size of 6k acoustic tokens per GPU for 800k steps.
 We optimize the models with the AdamW optimizer, warm up the learning rate for the first 32k updates to a peak of 5 × 10−4, and then linear decay it.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 #### Baseline
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We choose the SOTA zero-shot TTS model [YourTTS (2021)](../E2E/2021.12.04_YourTTS.md) as the baseline, which is trained on a combined dataset of [VCTK (2016)](../../Datasets/2012.08.00_VCTK.md), [LibriTTS (2019)](../../Datasets/2019.04.05_LibriTTS.md), and [TTS-Portuguese (2020)](../../Datasets/2020.05.11_TTS-Portuguese.md).
 We use their released checkpoint in [Github](https://github.com/Edresson/YourTTS).
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 #### Automatic metrics
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We employ the SOTA speaker verification model, WavLM-TDNN ([WavLM (2021)](../SpeechRepresentation/2021.10.26_WavLM.md)), to evaluate the speaker similarity between prompt (the decompressed enrolled speech) and synthesized speech.
 WavLM-TDNN achieved the top rank at the VoxSRC Challenge 2021 and 2022 leaderboards.
@@ -417,26 +439,26 @@ Neural TTS systems suffer from the robustness issue, which sometimes has deletio
 We perform ASR on the generated audio and calculate the word error rate (WER) with respect to the original transcriptions.
 In this experiment, we employ the [HuBERT-Large (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md) model fine-tuned on LibriSpeech 960h as the ASR model, which is a CTC-based model without language model fusion.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 #### Human evaluation
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We calculate the [comparative mean option score (CMOS)](../../Evaluations/CMOS.md) and [similarity mean option score (SMOS)](../../Evaluations/SMOS.md) by crowdsourcing, where 12 and 6 native speakers are invited as CMOS and SMOS contributors.
 The scale of SMOS is from 1 to 5 with 0.5-point increments.
 CMOS ranges from -3 (the new system is much worse than baseline) to 3 (the new system is much better than baseline) with intervals of 1.
 CMOS is an indicator of speech naturalness, and SMOS measures whether the speech is similar to the original speaker’s voice.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ### 5.2·LibriSpeech Evaluation
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We first use [LibriSpeech (2015)](../../Datasets/2015.04.19_LibriSpeech.md) for zero-shot TTS evaluation, since there is no speaker overlap between LibriLight training data and LibriSpeech test-clean data.
 Following [AudioLM (2022)](2022.09.07_AudioLM.md), we use the samples from LibriSpeech test-clean with lengths between 4 and 10 seconds, resulting in a 2.2 hours subset.
@@ -463,12 +485,13 @@ Table 3 shows the human evaluation results.
 It significantly outperforms the baseline with +0.93 SMOS, demonstrating the effectiveness of ***VALL-E*** in zero-shot scenarios.
 Regarding naturalness, ***VALL-E*** beats the baseline with +0.12 CMOS, indicating the proposed method could synthesize more natural and realistic speech against baselines
 
-</details>
+</td><td>
+
+</td></tr></table>
 
 #### Ablation Study
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 In this section, we perform detailed ablation experiments.
 We first study the NAR model.
@@ -487,13 +510,13 @@ In these experiments, we always use the NAR-2 prompts setting as the NAR model.
 In Table 5, we can see that when we remove the acoustic prompt (w/o acoustic prompt), it can only obtain a speaker similarity score of 0.236, showing the prompt is extremely crucial for speaker identity.
 Even if the NAR model could see the prompt, the prompt for the AR model also contributes a lot to speaker similarity.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ### 5.3·VCTK Evaluation
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We evaluate our model on VCTK consisting of 108 speakers, where none of the speakers are observed during training.
 Since YourTTS has seen 97 speakers in VCTK as training, we evaluate YourTTS performance on the full 107 speakers and 11 unseen speakers, respectively.
@@ -514,15 +537,15 @@ Furthermore, ***VALL-E*** achieves +0.04 CMOS over ground-truth, demonstrating n
 Compared to the evaluation results on LibriSpeech, ***VALL-E*** shows a better CMOS score in the comparison with ground truth, which is mainly because the average sentence length is shorter and some of the ground truth utterances also have noisy environments in VCTK.
 In terms of speaker similarity, VCTK is more challenging as it contains speakers with various accents while the training data and LibriSpeech test data do not contain various accent speakers.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ### 5.4·Qualitative Analysis
 
 #### Diversity
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Previous TTS systems have a strong one-one mapping between input text and output waveform, because mel spectrum generation is based on reconstruction for each step without randomness.
 Since ***VALL-E*** uses the sampling-based method to generate discrete tokens, its output is diverse for the same input text due to the randomness in inference.
@@ -536,26 +559,26 @@ The diversity is important for some downstream scenarios.
 For example, speech recognition always benefits from diverse inputs with different speakers and acoustic environments, which cannot be met by the previous TTS system.
 Considering the diversity feature of ***VALL-E***, it is an ideal candidate to generate pseudo-data for speech recognition.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 #### Acoustic environment maintenance:
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Another interesting finding is the acoustic environment consistency between the acoustic prompt and the generation.
 When the acoustic prompt has reverberation, ***VALL-E*** could synthesize speech with reverberation as well, whereas the baseline outputs clean speech.
 Our explanation is that ***VALL-E*** is trained on a large-scale dataset consisting of more acoustic conditions than the data used by the baseline, so ***VALL-E*** could learn the acoustic consistency instead of a clean environment only during training.
 We show consistency on our demo page.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 #### Speaker’s emotion maintenance
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Emotional TTS is a classic subtopic of speech synthesis, which synthesizes speech with a required emotion.
 Traditional methods ([Lei (2021)](../_Full/2020.11.17_Fine-grained_Emotion_Strength_Transfer_Control_and_Prediction_for_Emotional_Speech_Synthesis.md)) always train a model on a supervised emotional TTS dataset, where the speech corresponds to a transcription and an emotion label.
@@ -563,13 +586,13 @@ We find that ***VALL-E*** can preserve the emotion in the prompt at a zero-shot 
 We select acoustic prompts from [EmoV-DB (2018)](../../Datasets/2018.06.25_EmoV-DB.md), a dataset containing speech with five emotions, ***VALL-E*** is able to keep the same emotion of the prompt in speech synthesis, even if the model is not fine-tuned on an emotional TTS dataset.
 We put audio samples on our demo page.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
 
 ## 6·Conclusions: 结论
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We introduced ***VALL-E***, a language model approach for TTS with audio codec codes as intermediate representations.
 We pre-train ***VALL-E*** with 60K hours of speech data, and show the in-context learning capability in zero-shot scenarios.
@@ -601,5 +624,6 @@ Since ***VALL-E*** could synthesize speech that maintains speaker identity, it m
 To mitigate such risks, it is possible to build a detection model to discriminate whether an audio clip was synthesized by ***VALL-E***.
 We will also put Microsoft AI Principles∗into practice when further developing the models.
 
-</details>
-<br>
+</td><td>
+
+</td></tr></table>
