--- a/Models/SpeechLM/2023.05.25_VioLA.md
+++ b/Models/SpeechLM/2023.05.25_VioLA.md
@@ -27,8 +27,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Recent research shows a big convergence in model architecture, training objectives, and inference methods across various tasks for different modalities.
 In this paper, we propose ***VioLA***, a single auto-regressive Transformer decoder-only network that unifies various cross-modal tasks involving speech and text, such as speech-to-text, text-to-text, text-to-speech, and speech-to-speech tasks, as a conditional codec language model task via multi-task learning framework.
@@ -37,8 +36,7 @@ In such a way, all these tasks are converted to token-based sequence conversion 
 We further integrate task IDs (TID) and language IDs (LID) into the proposed model to enhance the modeling capability of handling different languages and tasks.
 Experimental results demonstrate that the proposed ***VioLA*** model can support both single-modal and cross-modal tasks well, and the decoder-only model achieves a comparable and even better performance than the strong baselines.
 
-</details>
-<br>
+</td><td>
 
 最近的研究表明, 不同模态的各种任务在模型架构, 训练目标和推理方法上存在很大的趋同.
 在本文中, 我们提出了 ***VioLA***, 这是一个单一的自回归 Transformer 仅解码器网络, 通过多任务学习框架, 将涉及语音和文本的各种跨模态任务 (如语音到文本, 文本到文本, 文本到语音和语音到语音任务) 统一为一个条件编解码器语言模型任务.
@@ -49,14 +47,34 @@ Experimental results demonstrate that the proposed ***VioLA*** model can support
 
 实验结果表明, 提出的 ***VioLA*** 模型能够很好地支持单模态和跨模态任务, 并且仅解码器架构的模型在性能上与强大的基线相当, 甚至更好.
 
-## 1·Introduction: 引言
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
