--- a/Models/SpeechLM/2024.02.14_MobileSpeech.md
+++ b/Models/SpeechLM/2024.02.14_MobileSpeech.md
@@ -3,41 +3,6 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题:
-- 作者:
-  - 01 [Shengpeng_Ji](../../Authors/Shengpeng_Ji.md)
-  - 02 [Ziyue_Jiang](../../Authors/Ziyue_Jiang.md)
-  - 03 [Hanting_Wang](../../Authors/Hanting_Wang.md)
-  - 04 [Jialong_Zuo](../../Authors/Jialong_Zuo.md)
-  - 05 [Zhou_Zhao_(赵洲)](../../Authors/Zhou_Zhao_(赵洲).md)
-- 机构:
-  - 机构
-- 时间:
-  - 预印时间: 2024.02.14 ArXiv v1
-  - 更新笔记: 2024.06.06
-- 发表:
-  - 期刊/会议
-- 链接:
-  - [ArXiv](https://arxiv.org/abs/2402.09378)
-  - [DOI]()
-  - [Github]()
-  - [Demo](
-- 标签:
-  - [SpeechSynthesis](../../Tags/SpeechSynthesis.md)
-  - [Zero-Shot](../../Tags/Zero-Shot.md)
-  - [MobileDevice](../../Tags/MobileDevice.md)
-- 页数: 13
-- 引用: ?
-- 被引: 1
-
-</details>
-
-
-# 标题
-
-<details>
-<summary>基本信息</summary>
-
 - 标题: "MobileSpeech: A Fast and High-Fidelity Framework for Mobile Zero-Shot Text-to-Speech"
 - 作者:
   - 01 Shengpeng Ji
@@ -58,6 +23,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 Zero-shot text-to-speech (TTS) has gained significant attention due to its powerful voice cloning capabilities, requiring only a few seconds of unseen speaker voice prompts.
 However, all previous work has been developed for cloud-based systems.Taking autoregressive models as an example, although these approaches achieve high-fidelity voice cloning, they fall short in terms of inference speed, model size, and robustness.There-fore, we propose ***MobileSpeech***, which is a fast, lightweight, and robust zero-shot text-to-speech system based on mobile devices for the first time.
 Specifically:
@@ -68,6 +35,10 @@ We demonstrate the effectiveness of ***MobileSpeech*** on multilingual datasets 
 
 ***MobileSpeech*** achieves RTF of 0.09 on a single A100 GPU and we have successfully deployed ***MobileSpeech*** on mobile devices.
 Audio samples are available at https://mobilespeech.github.io/ .
+
+</td><td>
+
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
