--- a/Models/SpeechLM/2025.02.07_Koel-TTS.md
+++ b/Models/SpeechLM/2025.02.07_Koel-TTS.md
@@ -54,6 +54,126 @@ Audio samples and demos are available on [our website](https://koeltts.github.io
 
 <table><tr><td width="50%">
 
+vThe advancement of large language models (LLMs) has brought transformative improvements to speech synthesis, enabling more natural and contextually adaptive speech generation.
+In particular, there has been a recent surge in the use of LLMs for various applications such as text-to-speech (TTS) and speech-to-speech translation (**VALL-E** [^wang2023neural]; **VALL-E X** [^zhang2023speak]; **AudioLM** [^borsos2023audiolm]; **T5-TTS** [^t5tts]; **UniAudio** [^yanguniaudio]; **SpeechX** [^wang2024speechx]).
+LLM-based TTS systems enable prompt-based customization, generating speech with human-like intonation while adapting to stylistic cues, contexts, and expressive nuances.
+This allows for diverse applications, from conversational interfaces to expressive narration, without extensive retraining.
+These advancements have been largely driven by the emergence of discrete neural audio codecs, which compress raw audio into token-based representations while preserving high fidelity (**EnCodec** [^encodec]; **DAC** [^dac_kumar2024high]; **SoundStream** [^zeghidour2021soundstream]; **Spectral Codec** [^langman2024spectral]; **LFSC** [^casanova2024low]).
+
+[^wang2023neural]: [**VALL-E**: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers.](2023.01.05_VALL-E.md) ArXiv2023.
+[^zhang2023speak]: [**VALL-E X**: Speak Foreign Languages with Your Own Voice: Cross-Lingual Neural Codec Language Modeling.](2023.03.07_VALL-E_X.md) ArXiv2023.
+[^borsos2023audiolm]: [**AudioLM**: A Language Modeling Approach to Audio Generation.](2022.09.07_AudioLM.md) TASLP2023.
+[^t5tts]: [**T5-TTS**: Improving Robustness of LLM-Based Speech Synthesis by Learning Monotonic Alignment.](2024.06.25_T5-TTS.md) InterSpeech2024.
+[^yanguniaudio]: [**UniAudio**: Towards Universal Audio Generation with Large Language Models.](2023.10.01_UniAudio.md) ICML2024.
+[^wang2024speechx]: [**SpeechX**: Neural Codec Language Models as a Versatile Speech Transformer.](2023.08.14_SpeechX.md) TASLP2024.
+[^encodec]: [**EnCodec**: High Fidelity Neural Audio Compression.](../SpeechCodec/2022.10.24_EnCodec.md) ArXiv2022.
+[^dac_kumar2024high]: [**DAC**: High-Fidelity Audio Compression with Improved RVQGAN.](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md) NeurIPS2024.
+[^zeghidour2021soundstream]: [**SoundStream**: An End-to-End Neural Audio Codec.](../SpeechCodec/2021.07.07_SoundStream.md) TASLP2021.
+[^langman2024spectral]: [**Spectral Codecs**: Spectrogram-Based Audio Codecs for High Quality Speech Synthesis.](../SpeechCodec/2024.06.07_Spectral_Codec.md) ArXiv2024.
+[^casanova2024low]: [**LFSC**: Low Frame-rate Speech Codec: a Codec Designed for Fast High-quality Speech LLM Training and Inference.](../SpeechCodec/2024.09.18_LFSC.md) ICASSP2025.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+Despite these advances, LLM-based TTS systems face challenges, with hallucinations being a prominent issue (**Survey** [^sahoo2024comprehensive]; **ELLA-V** [^song2024ella]; **T5-TTS** [^t5tts]; **AudioLM** [^borsos2023audiolm]).
+For example, when encountering text with repeated or redundant phrases, LLM-based TTS models may overemphasize these repetitions or fail to capture the intended flow and naturalness of the sentence.
+Additionally, among the multiple outputs sampled for the same input, there can be significant variation in quality, with some outputs sounding more natural, accurate, and appealing than others.
+This issue is akin to challenges faced in text-generation LLMs, where outputs may range from highly coherent to erroneous, depending on the model's response to complex prompts.
+
+[^sahoo2024comprehensive]: **Survey**: A Comprehensive Survey of Hallucination in Large Language, Image, Video and Audio Foundation Models. ACL EMNLP 2024.
+[^song2024ella]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering.](2024.01.14_ELLA-V.md) ArXiv2024.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+For text-generation, preference alignment techniques (**RLHF** [^christiano2017deep]; **InstructGPT**[^ouyang2022rlhf]; **DeepSeekMath** [^shao2024deepseekmath]; **DPO** [^rafailov2024direct]; **Nemotron-4** [^adler2024nemotron]) have been proposed to guide models to produce outputs that better match human preferences in coherence, relevance, and clarity.
+This is achieved through training with human feedback or automated scoring, based on criteria such as factual correctness and fluency.
+Driven by these advances, recent research employs preference alignment algorithms, including **RLHF** [^ouyang2022rlhf] and offline preference ranking methods (**DPO** [^rafailov2024direct]; **IPO** [^azar2024ipo]), to refine audio LLM outputs.
+For instance, **SpeechAlign** [^zhang2024speechalign] proposes an iterative strategy to align speech language models with human preferences by addressing the distribution gap between golden AR tokens (from real speech) and synthetic AR tokens (generated during inference).
+Although real speech from ground truth can be used to guide training, we will show that it introduces inconsistencies due to its fundamentally different distribution from model-generated tokens.
+This issue makes preference-based optimization such as **DPO** [^rafailov2024direct] less effective.
+Nonetheless, this approach has been applied in scenarios where obtaining high-quality positive examples is particularly challenging (**SPIN** [^chen2024self]; **SpeechAlign** [^zhang2024speechalign]).
+
+[^christiano2017deep]: [**RLHF**: Deep Reinforcement Learning from Human Preferences.](../../Modules/RLHF/2017.06.12_RLHF.md) NeurIPS2017.
+[^ouyang2022rlhf]: [**InstructGPT**: Training Language Models to Follow Instructions with Human Feedback.](../TextLM/InstructGPT.md) NeurIPS2022.
+[^shao2024deepseekmath]: [**DeepSeekMath**: Pushing the Limits of Mathematical Reasoning in Open Language Models.](../TextLM/2024.02.05_DeepSeekMath.md) ArXiv2024.
+[^rafailov2024direct]: [**DPO**: Direct Preference Optimization: Your Language Model Is Secretly A Reward Model.](../../Modules/RLHF/2023.05.29_DPO.md) NeurIPS2024.
+[^adler2024nemotron]: [**Nemotron-4** 340B Technical Report.](../TextLM/2024.06.17_Nemotron-4.md) ArXiv2024.
+[^azar2024ipo]: [**IPO**: A General Theoretical Paradigm to Understand Learning from Human Preferences.](../../Modules/RLHF/2023.10.18_IPO.md) AISTATS2024.
+[^zhang2024speechalign]: [**SpeechAlign**: Aligning Speech Generation to Human Preferences.](2024.04.08_SpeechAlign.md) NeurIPS2024.
+[^chen2024self]: [**SPIN**: Self-Play Fine-Tuning Converts Weak Language Models to Strong Language Models.](../TextLM/2024.01.02_SPIN.md) ArXiv2024.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+Another research direction to amplify the influence of conditioning inputs in generative models is **Classifier-Free Guidance (CFG)**.
+**CFG** [^ho2021classifier] was originally introduced to trade-off sample fidelity and diversity without relying on a separate classifier in diffusion models.
+Recently, CFG has been successfully explored in LLM-based text-generation models ([^sanchez2023stay]; [^fonseca2024can]; [^smirnov2024classifier]).
+In the context of text-to-speech synthesis, CFG has been extended to improve non-autoregressive flow-matching models (CFM) (**VoiceBox** [^le2024voicebox]; **CosyVoice2** [^du2024cosyvoice]; **F5-TTS** [^chen2024f5]; **E2 TTS** [^eskimez2024e2]).
+However, the applicability of CFG for enhancing LLM-based speech token prediction models is underexplored, with only a few attempts at improving textual coherence (**Parakeet** [^darefsky2024parakeet]).
+
+[^ho2021classifier]: [**CFG**: Classifier-Free Diffusion Guidance.](../Diffusion/2022.07.26_Classifier-Free_Guidance.md) NeurIPS2021.
+[^sanchez2023stay]: Stay on Topic with Classifier-Free Guidance. ArXiv2023.
+[^fonseca2024can]: Can Large Language Model Summarizers Adapt to Diverse Scientific Communication Goals? ArXiv2024.
+[^smirnov2024classifier]: Classifier-Free Guidance in LLMs Safety. ArXiv2024.
+[^le2024voicebox]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale.](2023.06.23_VoiceBox.md) NeurIPS2024.
+[^du2024cosyvoice]: [**Cosyvoice2**: Scalable Streaming Speech Synthesis with Large Language Models.](2024.12.13_CosyVoice2.md) ArXiv2024.
+[^chen2024f5]: [**F5-TTS**: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching.](../Diffusion/2024.10.09_F5-TTS.md) ArXiv2024.
+[^eskimez2024e2]: [**E2 TTS**: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot TTS.](../Diffusion/2024.06.26_E2_TTS.md) SLT2024.
+[^darefsky2024parakeet]: **Parakeet**, 2024. https://jordandarefsky.com/blog/2024/parakeet/.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+Building upon the above insights, we propose preference alignment and CFG techniques to enhance contextual coherence of LLM-based TTS models.
+We introduce ***Koel-TTS***, a transformer-based TTS model that leverages a low-frame-rate ($21.5$ FPS) audio codec (**LFSC** [^casanova2024low]) to enable low-latency autoregressive speech generation.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+To perform preference alignment, we first identify key metrics that strongly correlate with human judgments of generated speech: transcription accuracy and target speaker similarity.
+Each metric captures distinct aspects of the generated output and can be evaluated using **Automatic Speech Recognition (ASR)** and **Speaker Verification (SV)** models.
+We integrate these metrics into a reward system that ranks the generated outputs.
+With this foundation, we then explore preference alignment algorithms, focusing on pairwise ranking methods and scalar reward optimization.
+Our findings show that fine-tuning the base model with preference alignment significantly improves speaker similarity, intelligibility, and generalization to unseen speakers.
+Notably, our method also enhances naturalness, despite not explicitly optimizing for this metric.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+To further enhance synthesis quality with CFG, we train the ***Koel-TTS*** model with both conditional and unconditional inputs, by randomly dropping out conditional information (text and context audio) during training.
+During inference, the unconditional logits are combined with conditional logits using a CFG scale, to achieve significant improvement in intelligibility, speaker similarity, and naturalness of generated speech.
+Furthermore CFG can be applied independently to the base model or the preference aligned model, yielding substantial improvements across all
+evaluation metrics for both.
+Combining preference alignment with CFG, we train a 1.1 billion parameter multilingual ***Koel-TTS*** model that
+achieves state-of-the-art zero-shot TTS results across several human and automatic evaluation metrics.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+The key contributions of this work are as follows:
+- We introduce ***Koel-TTS***, a multilingual encoder-decoder transformer model that maps text and context audio directly to acoustic tokens using a low-frame-rate audio codec, enabling expressive, robust, and low-latency autoregressive speech synthesis.
+- We propose a novel preference alignment framework for LLM-based TTS by leveraging ASR and SV models as reward signals, significantly improving speaker similarity, intelligibility, and generalization to seen and unseen speakers.
+- We adapt classifier-free guidance, dropping both text and context conditioning, to enhance LLM-based speech synthesis, demonstrating its effectiveness in improving naturalness, speaker similarity, and intelligibility.
+- Our ***Koel-TTS*** model, trained with preference alignment and CFG, achieves state-of-the-art zero-shot TTS performance while reducing hallucinations and improving intelligibility.
+Our model implementation is publicly available in the ***Koel-TTS*** repository.
+
+</td><td>
+
 </td></tr></table>
 
 ## 2·Related Works: 相关工作
