--- a/Models/SpeechRepresentation/2021.10.20_SLAM.md
+++ b/Models/SpeechRepresentation/2021.10.20_SLAM.md
@@ -44,9 +44,10 @@ Through extensive empirical analysis we also demonstrate the importance of the c
 无监督预训练现在已经成为文本和语音理解的主要方法.
 在大量未标注数据上预训练的自注意力模型, 在针对来自各个领域和语言的下游任务进行微调时, 取得了巨大的成功.
 本文进一步推进了无监督语言预训练的普遍性, 通过在单一模型中统一语音和文本预训练.
-我们构建了一个单一编码器, 结合了未标注文本的 BERT 目标和未标注语音的 w2v-BERT 目标.
-为了进一步对齐模态之间的模型表示, 我们利用对齐损失, 特别是翻译语言建模 TLM 和语音文本匹配 STM, 利用监督的语音文本识别数据.
-我们证明在预训练期间结合语音和文本数据可以显著提高 CoVoST 2 语音翻译的下游质量, 与单一模态预训练模型相比, 大约提高了 1 个 BLEU, 同时在 LibriSpeech 和 SpeechStew ASR 任务上保持接近最先进的表现.
+我们构建了一个单一编码器, 结合了未标注文本的 **BERT** 目标和未标注语音的 **w2v-BERT** 目标.
+为了进一步对齐模态之间的模型表示, 我们利用对齐损失, 特别是翻译语言建模 (Translation Language Modeling, TLM) 和语音文本匹配 (Speech Text Matching, STM), 利用监督的语音文本识别数据.
+
+我们证明在预训练期间结合语音和文本数据可以显著提高 CoVoST 2 语音翻译的下游质量, 与单一模态预训练模型相比, 大约提高了 1 个 BLEU, 同时在 **LibriSpeech** 和 **SpeechStew** ASR 任务上保持接近最先进的表现.
 在四个 GLUE 任务和文本规范化任务中, 我们观察到容量限制和两种模态之间的干扰, 导致性能比同等仅文本模型有所下降, 但仍然与 BERT 相当.
 通过广泛的经验分析, 我们还展示了语音预训练的目标函数的选择的重要性, 以及添加额外监督信号对学习表示质量的有益影响.
 
