--- a/Models/SpeechLM/2022.09.07_AudioLM.md
+++ b/Models/SpeechLM/2022.09.07_AudioLM.md
@@ -29,8 +29,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We introduce ***AudioLM***, a framework for high-quality audio generation with long-term consistency.
 ***AudioLM*** maps the input audio to a sequence of discrete tokens and casts audio generation as a language modeling task in this representation space.
@@ -40,8 +39,7 @@ By training on large corpora of raw audio waveforms, ***AudioLM*** learns to gen
 When trained on speech, and without any transcript or annotation, ***AudioLM*** generates syntactically and semantically plausible speech continuations while also maintaining speaker identity and prosody for unseen speakers.
 Furthermore, we demonstrate how our approach extends beyond speech by generating coherent piano music continuations, despite being trained without any symbolic representation of music.
 
-</details>
-<br>
+</td><td>
 
 我们介绍了 ***AudioLM***, 一个用于高质量音频生成且具有长期一致性框架.
 ***AudioLM*** 将输入音频映射为一系列离散的 Token, 并将音频生成视为在该表示空间中的语言建模任务.
@@ -51,14 +49,34 @@ Furthermore, we demonstrate how our approach extends beyond speech by generating
 当在语音上训练, 且没有任何文字或注释时, ***AudioLM*** 生成符合语法和语义的语音续写, 同时保持发言人身份和语调的不变性, 对于未见过的发言人也是如此.
 此外, 我们展示了我们的方法如何扩展到语音之外, 即生成连贯的钢琴音乐续写, 尽管在训练过程中没有任何音乐的符号表示.
 
-## 1·Introduction: 引言
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
