--- a/Models/Music/2023.01.26_MusicLM.md
+++ b/Models/Music/2023.01.26_MusicLM.md
@@ -32,8 +32,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We introduce ***MusicLM***, a model generating high-fidelity music from text descriptions such as "a calming violin melody backed by a distorted guitar riff".
 ***MusicLM*** casts the process of conditional music generation as a hierarchical sequence-to-sequence modeling task, and it generates music at 24 kHz that remains consistent over several minutes.
@@ -41,14 +40,15 @@ Our experiments show that ***MusicLM*** outperforms previous systems both in aud
 Moreover, we demonstrate that ***MusicLM*** can be conditioned on both text and a melody in that it can transform whistled and hummed melodies according to the style described in a text caption.
 To support future research, we publicly release ***MusicCaps***, a dataset composed of 5.5k music-text pairs, with rich text descriptions provided by human experts.
 
-</details>
-<br>
+</td><td>
 
 我们介绍了 ***MusicLM***, 一个从文本描述如 "甜美的小提琴旋律后跟扭曲的吉他段落" 生成高保真音乐的模型.
 ***MusicLM*** 将条件化音乐生成过程视为一种层次化序列到序列建模任务, 并以 24kHz 的持续生成数分钟的音乐.
 我们的实验表明 ***MusicLM*** 优于以往系统在音频质量和文本描述的一致性.
 此外, 我们展示了 ***MusicLM*** 可以以文本和旋律为条件, 它可以根据文本说明所描述的风格来转换口哨和哼唱的旋律.
 为了支持未来的研究, 我们公开发布了 ***MusicCaps***, 一个由 5.5k 条音乐-文本对组成的数据集, 其中包含丰富的文本描述, 这些描述由人工专家提供.
+
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
