更新 SpeechPrompt-v2 排版

--- a/Models/SpeechLM/2023.03.01_SpeechPrompt_v2.md
+++ b/Models/SpeechLM/2023.03.01_SpeechPrompt_v2.md
@@ -25,6 +25,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 Prompt tuning is a technology that tunes a small set of parameters to steer a pre-trained language model (LM) to directly generate the output for downstream tasks.
 Recently, prompt tuning has demonstrated its storage and computation efficiency in both natural language processing (NLP) and speech processing fields.
 These advantages have also revealed prompt tuning as a candidate approach to serving pre-trained LM for multiple tasks in a unified manner.
@@ -33,14 +35,52 @@ However, whether **SpeechPrompt** is capable of serving a large number of tasks 
 In this work, we propose ***SpeechPrompt v2***, a prompt tuning framework capable of performing a wide variety of speech classification tasks, covering multiple languages and prosody-related tasks.
 The experiment result shows that ***SpeechPrompt v2*** achieves performance on par with prior works with less than 0.15M trainable parameters in a unified framework.
 
+</td><td>
+
+提示调优是一种通过调节少量的参数来引导预训练语言模型直接生成下游任务的输出的技术.
+近年来, 提示调优在自然语言处理和语音处理领域展示了其存储和计算效率.
+这些优势使得提示调优成为一种候选方法, 可以以统一的方式为多个任务提供预训练语言模型的服务.
+
+对于语音处理, **SpeechPrompt** 展现了其高效的参数利用率, 并在一些语音分类任务中表现出竞争力的性能.
+然而, **SpeechPrompt** 是否能够服务于大量任务这一问题仍未得到解答.
+
+在这项工作中, 我们提出了 ***SpeechPrompt v2***, 一种能够执行多种语音分类任务的提示调优框架, 涵盖了多种语言和与语调相关的任务.
+实验结果表明, ***SpeechPrompt v2*** 在一个统一框架下以不到 0.15M 的可训练参数, 达到了与先前工作相当的性能.
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
