--- a/Models/SpeechLM/2023.03.07_VALL-E_X.md
+++ b/Models/SpeechLM/2023.03.07_VALL-E_X.md
@@ -31,6 +31,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 We propose a cross-lingual neural codec language model, ***VALL-E X***, for cross-lingual speech synthesis.
 Specifically, we extend **VALL-E** and train a multi-lingual conditional codec language model to predict the acoustic token sequences of the target language speech by using both the source language speech and the target language text as prompts.
 ***VALL-E X*** inherits strong in-context learning capabilities and can be applied for zero-shot cross-lingual text-to-speech synthesis and zero-shot speech-to-speech translation tasks.
@@ -38,14 +40,52 @@ Experimental results show that it can generate high-quality speech in the target
 Moreover, ***VALL-E X*** effectively alleviates the foreign accent problems, which can be controlled by a language ID.
 Audio samples are available at [this https URL](https://aka.ms/vallex).
 
+</td><td>
+
+我们提出了一种跨语言神经编解码语言模型, ***VALL-E X***, 用于跨语言语音合成.
+具体来说, 我们扩展了 **VALL-E**, 并训练了一个多语言条件编解码语言模型, 利用源语言语音和目标语言文本作为提示, 预测目标语言语音的声学标记序列.
+
+***VALL-E X*** 继承了强大的上下文学习能力, 能够应用于零样本跨语言文本到语音合成和零样本语音到语音翻译任务.
+
+实验结果表明, 它能够仅通过源语言的一次语音输入作为提示, 生成目标语言的高质量语音, 同时保持未见说话人的声音、情感和声学环境.
+此外, ***VALL-E X*** 有效缓解了外语口音问题, 且该问题可以通过语言ID进行控制.
+
+音频样本可在 [此链接](https://aka.ms/vallex) 处获取.
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
