--- a/Models/SpeechLM/ST2T/2023.05.18_LTU.md
+++ b/Models/SpeechLM/ST2T/2023.05.18_LTU.md
@@ -16,15 +16,14 @@
   - [Github](https://github.com/YuanGongND/ltu)
   - [Demo](https://huggingface.co/spaces/yuangongfdu/ltu)
 - 文件:
-  - [ArXiv](_PDF/2305.10790v3__LTU__Listen_Think_and_Understand.pdf)
-  - [Publication](_PDF/2305.10790p0__LTU__ICLR2024.pdf)
+  - [ArXiv](../_PDF/2305.10790v3__LTU__Listen_Think_and_Understand.pdf)
+  - [Publication](../_PDF/2305.10790p0__LTU__ICLR2024.pdf)
 
 </details>
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 The ability of artificial intelligence (AI) systems to perceive and comprehend audio signals is crucial for many applications.
 Although significant progress has been made in this area since the development of AudioSet, most existing models are designed to map audio inputs to pre-defined, discrete sound label sets.
@@ -38,12 +37,11 @@ To train ***LTU***, we created a new ***OpenAQA-5M*** dataset consisting of 1.9 
 More importantly, it exhibits emerging audio reasoning and comprehension abilities that are absent in existing audio models.
 To the best of our knowledge, ***LTU*** is one of the first multimodal large language models that focus on general audio (rather than just speech) understanding.
 
-</details>
-<br>
+</td><td>
 
 人工智能系统在感知和理解音频信号的能力对于许多应用来说至关重要.
 尽管这一领域自 AudioSet 发展以来已经取得了显著进展, 但现有的模型大多是将音频输入映射到预定义的离散的声音标签集合.
-相比之下, 人类不仅能够将声音分类到一般类别中, 还能够聆听声音的更细微的细节, 解释预测的原因, 思考声音所按时的内容, 并理解场景和需要采取的动作, 如果有的话.
+相比之下, 人类不仅能够将声音分类到一般类别中, 还能够聆听声音的更细微的细节, 解释预测的原因, 思考声音所暗示的内容, 并理解场景和需要采取的动作, 如果有的话.
 这些超越感知的能力在现有的音频模型中尚未出现.
 
 另一方面, 现代大语言模型展示了新兴的推理能力, 但它们缺乏音频感知能力.
@@ -55,14 +53,40 @@ To the best of our knowledge, ***LTU*** is one of the first multimodal large lan
 更重要的是, 它展示了突出的音频推理和理解能力, 这些能力在现有的音频模型中都缺乏.
 至于我们所知, ***LTU*** 是首批专注于通用音频 (而非仅仅是语音) 理解的多模态大语言模型之一.
 
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
